--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dashboard</title>
+    <meta name="description" content="Buy airtime, data, pay electricity bills, cable TV, and more. Fast, secure, and affordable. Terrabyte – Nigeria's trusted digital services platform." />
+    <meta name="keywords" content="Terrabyte, buy airtime Nigeria, buy data Nigeria, electricity bill payment, cable TV subscription, bet funding, MTN, Airtel, Glo, 9mobile" />
+    <title>Terrabyte – Airtime, Data, Bills & More</title>
   </head>
   <body>
     <div id="root"></div>
